--- a/survis/about.html
+++ b/survis/about.html
@@ -43,7 +43,7 @@
 <body>
 	<h2>The State of The Art of Visual Analytics for eXplainable Deep Learning</h2>
 	<h4>Biagio La Rosa, Graziano Blasilli, Romain Bourqui, David Auber, Giuseppe Santucci, Roberto Capobianco, Enrico Bertini, Romain Giot, and Marco Angelini</h4>
-	<p><a href="https://doi.org/xxx/yyy" target="_blank">https://doi.org/xxx/yyy</a></p>
+	<p><a href="https://doi.org/10.1111/cgf.14733" target="_blank">https://doi.org/10.1111/cgf.14733</a></p>
 	<hr>
 	<p>
 		The usage and research of machine-learning-based solutions to solve problems or reduce their computational costs are becoming increasingly widespread in many domains. Deep Learning plays a big part in this growth. However, it comes with the drawbacks of a lack of explainability and behaving as a black-box model.
